# serde-xdr

./: Cargo.toml  README.md  rustfmt.toml
src/: de.rs  errors.rs  lib.rs  ser.rs  tests.rs
src/de/: errors.rs  mod.rs
src/de/deserializer/: mod.rs  tests.rs
src/de/deserializer/enum_deserializer/: mod.rs  tests.rs  variant_deserializer.rs
src/de/deserializer/sequence_deserializer/: mod.rs  tests.rs
src/de/deserializer/struct_deserializer/: mod.rs  tests.rs
src/de/deserializer/tests/: mod.rs  value.rs  visitor.rs
src/opaque_data/: byte_array.rs  fixed_length.rs  mod.rs  tests.rs
src/opaque_data/tests/: fixed_length.rs  mod.rs
src/ser/: errors.rs  mod.rs
src/ser/serializer/: mod.rs  tests.rs
src/ser/serializer/sequence_serializer/: mod.rs  tests.rs  type_name.rs
src/ser/serializer/struct_serializer/: mod.rs  tests.rs  type_name.rs
src/ser/serializer/type_name/: mod.rs
