[package]
name = "serde-xdr"
description = "XDR serialization and deserialization for Serde"
version = "0.4.1-dev"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]
homepage = "https://github.com/jvff/serde-xdr"
readme = "README.md"
license = "GPL-3.0"
keywords = ["xdr", "serde", "serialization", "deserialization"]
categories = ["encoding"]

[dependencies]
byteorder = "1.1"
error-chain = "0.11"
serde = "1.0"

[dev-dependencies]
ordered-float = "0.5"
serde_bytes = "0.10"
serde_derive = "1.0"
